2003-03-12 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix En Passant handling in white/black commands

	* Fix to HashSize handling

--- 5.06 Released

2003-03-10 Simon Waters <Simon@wretched.demon.co.uk>      

	* Remove obselete M4 include file.

2003-03-09 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix preprocessor directives for Macro names.

2003-03-07 Simon Waters <Simon@wretched.demon.co.uk>      

	* Always used bundled geopt's to simply build

2003-03-06 Simon Waters <Simon@wretched.demon.co.uk>      

	* Correct pthread handling in configure.ac

	* Correct LIBOBJS handling on platforms without getopt_long

	* Avoid deprecated multiline string literals in cmd.c

	* Avoid redefining MAX and MIN macros on HPUX

	* Make pawncover constant to avoid difference between 
	  first and subsequent games. Affects many King safety 
	  calculations.

2003-02-16 Simon Waters <Simon@wretched.demon.co.uk>

	* Add getopt files to distribution for platforms without 
	  GNU C library

	* Replace ac_need_stdint_h with ac_create_stdint_h

	* Add acx_pthread, config.sub, config.guess

2003-02-11 Simon Waters <Simon@wretched.demon.co.uk>

	* Drop enpassant knowledge on "switch" command.

	* Add in 2 move exception to EvaluateDraw to
	  avoid drawing won games.

2003-02-05 Simon Waters <Simon@wretched.demon.co.uk>

	* Various string length issues tidied up.

2003-01-31 Simon Waters <Simon@wretched.demon.co.uk>

	* Implement "white" and "black" commands.

2003-01-29 Anil Mungal <vagrancy@rogers.com>

	* Two minor optimisations to eval.c (1% speed-up test evalspeed)

2003-01-29 Simon Waters <Simon@wretched.demon.co.uk>

	* Use getopt_long for option handling

	* Add standard options --help --version

	* Add command line command "usage"

	* Add option --hashsize

	* Rework hint to use first move in Tree

	* GetElapse time even when not against the clock

	* Modify aclocal.m4 to stop spurious 32's in configure
	  which break build AIX 4.2, and Solaris 2.5.1 
